--- a/style.scss
+++ b/style.scss
@@ -8,25 +8,40 @@
   font-size: 2.5rem;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 3rem;}
+  margin-bottom: 3rem; 
+   color: variables.$color-text; }
 
 article {
   position: relative; 
 }
 
+.hero-container {
+  position: relative; 
+  width: 100%;
+  max-height: 70vh; 
+  overflow: hidden; 
+}
+
 .intro-title {
-  position: absolute; 
-  top: 10%;
+  position: absolute;
+  top: 10%; 
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10;
-  
   width: 100%;
   text-align: center;
   font-size: 5rem;
   color: variables.$color-text;
   background-color: transparent;
   text-shadow: 2px 2px 8px variables.$color-dark;
+}
+
+.hero-image {
+  width: 100%;
+  height: 70vh; 
+  object-fit: cover; 
+  object-position: center; 
+  display: block;
 }
 
 img.img-fluid { width: 100%; max-width: 100%; height: auto; display: block; }
@@ -217,7 +232,7 @@ footer {
   }
 
   .contact-info {
-
+    text-align: center;
     h2 {
       margin-bottom: 1.5rem;
     }
@@ -283,3 +298,55 @@ footer {
   }
 } 
 } 
+
+.carousel {
+  width: 100%;
+  margin: 0.5rem 0;
+  overflow: hidden;
+
+  &__track {
+    display: flex;
+    align-items: center; 
+    width: 300%;
+    animation: slide 20s infinite;
+  }
+
+
+  &__slide {
+    width: 33.333%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  img {
+
+    height: 180px; 
+
+ 
+    width: auto;
+
+    margin: 0.5rem 0; 
+  }
+}
+
+
+@keyframes slide {
+
+  0%, 25% {
+    transform: translateX(0%);
+  }
+
+  33%, 58% {
+    transform: translateX(-33.333%);
+  }
+
+  66%, 91% {
+    transform: translateX(-66.666%);
+  }
+
+  100% {
+    transform: translateX(0%);
+  }
+}
